Correction du bug d'ouverture du centre

--- a/app/Resources/views/centre/fermeture.confirmer.html.twig
+++ b/app/Resources/views/centre/fermeture.confirmer.html.twig
@@ -15,9 +15,15 @@
                 <tr>
                     <td>{{ chaine.caisse.numero }}</td>
                     <td>{% if chaine.caisse.ouvert %}OUVERTE{% else %}FERMEE{% endif %}</td>
-                    <td>{{ chaine.caisse.getAffectationActive.agent.username }}</td>
+                    <td>{% if chaine.caisse.getAffectationActive %}
+                            {{ chaine.caisse.getAffectationActive.agent.username }}
+                        {% endif %}
+                    </td>
                     <td>{{ chaine.piste.numero }}</td>
-                    <td>{{ chaine.piste.getAffectationActive.agent.username }}</td>
+                    <td>{% if chaine.piste.getAffectationActive %}
+                            {{ chaine.piste.getAffectationActive.agent.username }}
+                        {% endif %}
+                    </td>
                 </tr>
             {% endfor %}
             </tbody>
