--- a/app/Resources/views/centre/ouverture.confirmer.html.twig
+++ b/app/Resources/views/centre/ouverture.confirmer.html.twig
@@ -1,7 +1,12 @@
-    <div class="table-responsive">
-        Confirmez-vous l'ouverture du centre?
+   
+<div class="table-responsive">
+    Confirmez-vous l'ouverture du centre?
         <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
             <thead>
+                <tr>
+                    
+                    <th colspan="5" align="center">Cartes vierges : {{ centre.carteVierge }}</th>
+                </tr>
             <tr>
                 <th>CAISSE</th>
                 <th>SOLDE INITIAL</th>
