--- a/app/Resources/views/centre/fermeture.confirmer.html.twig
+++ b/app/Resources/views/centre/fermeture.confirmer.html.twig
@@ -2,6 +2,10 @@
         Vous allez fermer le centre. Cela suppose que tous les caissiers ont terminé. Merci de confirmer. 
         <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
             <thead>
+                <tr>
+                    <th colspan="3" align="center">Cartes vierges à l'ouverture: {{ centre.carteViergeOuverture }}</th>
+                    <th colspan="2" align="center">Cartes vierges en stock: {{ centre.carteVierge }}</th>
+                </tr>
             <tr>
                 <th>CAISSE</th>
                 <th>ETAT</th>
