Sortie caisse transformer en opérations de caisse : entrées et sortie Remboursement effectué avec sortie de caisse si caissier principal Prise en compte de la date de dernière visite dans l'aiguillageAmélioration de l'ouverture/fereture de caisse/centre Prise en compte du délai de la première visite apres mc par genre Autres

--- a/app/Resources/views/caisse/solde.html.twig
+++ b/app/Resources/views/caisse/solde.html.twig
@@ -12,7 +12,7 @@
         <li class="breadcrumb-item">Initialiser la caisse
     </ol>
 {% endblock %}
-{% block pagetitle -%}INITIALISER LA CAISSE{% endblock %}
+{% block pagetitle -%}INITIALISER LA CAISSE N°{{caisse.numero}}{% endblock %}
 {% block actions %}
     {% if is_granted('ROLE_CAISSIER_PRINCIPAL') %}
         <label class="btn btn-outline-secondary"><a href="{{ path('admin_gestion_centre_ouverture') }}">RETOUR A L'OUVERTURE</a></label>
