--- a/app/Resources/views/sortiecaisse/edit.html.twig
+++ b/app/Resources/views/sortiecaisse/edit.html.twig
@@ -7,12 +7,12 @@
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
-        <li class="breadcrumb-item"><a href="{{ path('admin_gestion_centre_sorties_index') }}">Sorties de caisse</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('admin_gestion_centre_sorties_index') }}">Opérations de caisse</a></li>
         <li class="breadcrumb-item">Modifier</li>
     </ol>
 {% endblock %}
 {% block menu_gestion_actif %}active{% endblock %}
-{% block pagetitle -%}MODIFIER UNE SORTIE DE CAISSE{% endblock %}
+{% block pagetitle -%}MODIFIER UNE OPERATION DE CAISSE{% endblock %}
 {% block actions %} 
     <label class="btn btn-outline-secondary"><a href="{{ path('admin_gestion_centre_sorties_index') }}">Retour à la liste</a></label>
     <label class="btn btn-outline-secondary">
