--- a/app/Resources/views/vehicule/index.html.twig
+++ b/app/Resources/views/vehicule/index.html.twig
@@ -16,6 +16,11 @@
     <label class="btn btn-outline-secondary"><a href="{{ path('vehicule_export') }}">EXPORTER LA LISTE DES VEHICULES</a></label>
 {% endblock %}
 {% block body -%}
+    {% if centre.etat %} 
+        <label class="btn btn-success pointer-event">LE CENTRE EST OUVERT</label>
+    {% else %}
+        <label class="btn btn-warning pointer-event">LE CENTRE EST FERME. ATTENDEZ SON OUVERTURE POUR POUVOIR AIGUILLER</label>
+    {% endif %}
 <div class="table-responsive">
     <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
         <thead>
@@ -85,6 +90,7 @@
         }
     }
     });
+    
     
      
 		
