--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -6,20 +6,12 @@
                 <div class="card text-white bg-primary">
                   <div class="card-body pb-0">
                     <div class="btn-group float-right">
-                      <button class="btn btn-transparent dropdown-toggle p-0" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="icon-settings"></i>
-                      </button>
-                      <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                      </div>
+                      
                     </div>
-                    <div class="text-value">9.823</div>
-                    <div>Members online</div>
+                    <div class="text-value">{{ nbVehicule|number_format(0, ',', ' ') }}</div>
+                    <div>Nombre de véhicule</div>
                   </div>
                   <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
-                    <canvas class="chart" id="card-chart1" height="70"></canvas>
                   </div>
                 </div>
               </div>
@@ -27,14 +19,10 @@
               <div class="col-sm-6 col-lg-3">
                 <div class="card text-white bg-info">
                   <div class="card-body pb-0">
-                    <button class="btn btn-transparent p-0 float-right" type="button">
-                      <i class="icon-location-pin"></i>
-                    </button>
-                    <div class="text-value">9.823</div>
-                    <div>Members online</div>
+                    <div class="text-value">{{ enCours|number_format(0, ',', ' ') }}</div>
+                    <div>Visites en cours</div>
                   </div>
                   <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
-                    <canvas class="chart" id="card-chart2" height="70"></canvas>
                   </div>
                 </div>
               </div>
@@ -43,20 +31,11 @@
                 <div class="card text-white bg-warning">
                   <div class="card-body pb-0">
                     <div class="btn-group float-right">
-                      <button class="btn btn-transparent dropdown-toggle p-0" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="icon-settings"></i>
-                      </button>
-                      <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                      </div>
                     </div>
-                    <div class="text-value">9.823</div>
-                    <div>Members online</div>
+                    <div class="text-value">{{ succes|number_format(0, ',', ' ') }}</div>
+                    <div>Visites réussies</div>
                   </div>
                   <div class="chart-wrapper mt-3" style="height:70px;">
-                    <canvas class="chart" id="card-chart3" height="70"></canvas>
                   </div>
                 </div>
               </div>
@@ -65,30 +44,22 @@
                 <div class="card text-white bg-danger">
                   <div class="card-body pb-0">
                     <div class="btn-group float-right">
-                      <button class="btn btn-transparent dropdown-toggle p-0" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="icon-settings"></i>
-                      </button>
-                      <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                      </div>
+                      
                     </div>
-                    <div class="text-value">9.823</div>
-                    <div>Members online</div>
+                    <div class="text-value">{{ echec|number_format(0, ',', ' ') }}</div>
+                    <div>Visites échouées</div>
                   </div>
                   <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
-                    <canvas class="chart" id="card-chart4" height="70"></canvas>
                   </div>
                 </div>
               </div>
               <!-- /.col-->
             </div>
-<div class="row">
-                  <div class="col-sm-5">
-                    <h4 class="card-title mb-0">Traffic</h4>
-                    <div class="small text-muted">November 2017</div>
-                  </div>
+    <div class="row">
+        <div class="col-sm-5">
+            <h4 class="card-title mb-0">Visites par mois</h4>
+                <div class="small text-muted">{{ "now"|date("m/d/Y") }}</div>
+        </div>
                   <!-- /.col-->
                   <div class="col-sm-7 d-none d-md-block">
                     <button class="btn btn-primary float-right" type="button">
