--- a/app/Resources/views/centre/menu.html.twig
+++ b/app/Resources/views/centre/menu.html.twig
@@ -8,12 +8,12 @@
 {% if is_granted('ROLE_CAISSIER_PRINCIPAL') %} 
     <li class="nav-item">
         <a class="nav-link {% block menu_ouvertures_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_ouverture') }}">
-            <i class="nav-icon fa fa-key"></i> Ouverture
+            <i class="nav-icon fa fa-key"></i> Ouverture du centre
         </a>
     </li>
     <li class="nav-item">
         <a class="nav-link {% block menu_sorties_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_sorties_index') }}">
-            <i class="nav-icon fa fa-calculator"></i> Opérations de Caisse</a>
+            <i class="nav-icon fa fa-calculator"></i> Opérations de coffre</a>
     </li>
     <li class="nav-item">
         <a class="nav-link {% block menu_quittance_actif %}{% endblock %}" href="{{ path('caisse_quittance_index') }}">
