--- a/app/Resources/views/parametres/menu.html.twig
+++ b/app/Resources/views/parametres/menu.html.twig
@@ -26,6 +26,10 @@
             <a class="nav-link {% block menu_typeimmatriculations_actif %}{% endblock %}" href="{{ path('admin_parametres_typeimmatriculation_index') }}">
                 <i class="nav-icon icon-list"></i> Type Immatriculation</a>
         </li>
+        <li class="nav-item {% block menu_typecartegrise_open %}{% endblock %}">
+            <a class="nav-link {% block menu_typecartegrise_actif %}{% endblock %}" href="{{ path('admin_parametres_typecartegrise_index') }}">
+                <i class="nav-icon icon-list"></i> Type carte grise</a>
+        </li>
     </ul>
 </li>
 <li class="nav-item nav-dropdown {% block menu_tarifs_open %}{% endblock %}">
