--- a/app/Resources/views/sortiecaisse/index.html.twig
+++ b/app/Resources/views/sortiecaisse/index.html.twig
@@ -7,11 +7,11 @@
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
-        <li class="breadcrumb-item">Opérations de caisse</li>
+        <li class="breadcrumb-item">Opérations de coffre</li>
     </ol>
 {% endblock %}
 {% block menu_gestion_actif %}active{% endblock %}
-{% block pagetitle -%}OPERATIONS DE CAISSE{% endblock %}
+{% block pagetitle -%}OPERATIONS DE COFFRE{% endblock %}
 {% block actions %}
     {% if is_granted('ROLE_SUPERVISEUR') %}
         <label class="btn btn-outline-secondary"><a href="{{ path('admin_gestion_centre_sorties_new') }}">CREER</a></label>
