--- a/app/Resources/views/visite/show.html.twig
+++ b/app/Resources/views/visite/show.html.twig
@@ -18,6 +18,12 @@
     {% if is_granted('ROLE_CONTROLLEUR') %} 
         <label class="btn btn-outline-secondary"><a href="{{ path('visite_controle') }}">LISTE DES CONTROLES</a></label>
         <label class="btn btn-outline-secondary"><a href="{{ path('rapport_imprimer', { 'id': visite.id }) }}">IMPRIMER LE RAPPORT</a></label>
+        {% if visite.statut == 2 or visite.statut == 4 %}
+            <label class="btn btn-outline-secondary"><a href="{{ path('certificat_imprimer_1', { 'id': visite.id }) }}">VOLET 1</a></label>
+        {% endif %}
+        {% if visite.statut == 2 or visite.statut == 4 %}
+            <label class="btn btn-outline-secondary"><a href="{{ path('certificat_imprimer_2', { 'id': visite.id }) }}">VOLET 2</a></label>
+        {% endif %}
     {% endif %}
 {% endblock %}
 {% block body %}
