Etat journalier des caisses Simplification formulaire véhicule

--- a/app/Resources/views/vehicule/new.html.twig
+++ b/app/Resources/views/vehicule/new.html.twig
@@ -24,7 +24,7 @@
 {% block javascripts -%}
   <script>
   $( function() {
-        $( "#appbundle_vehicule_genre" ).prop("disabled", true);
+        //$( "#appbundle_vehicule_genre" ).prop("disabled", true);
         $( "#appbundle_vehicule_dateCarteGrise" ).datepicker({changeMonth: true, changeYear: true, defaultDate: "-10Y", dateFormat: 'yy-mm-dd' });
         $( "#appbundle_vehicule_dateMiseCirculation" ).datepicker({changeMonth: true, changeYear: true,  defaultDate: "-10Y", dateFormat: 'yy-mm-dd' });
         $( "#appbundle_vehicule_dateValidite" ).datepicker({changeMonth: true, changeYear: true, defaultDate: "-10Y", dateFormat: 'yy-mm-dd' });
@@ -33,14 +33,14 @@
             $("#appbundle_vehicule_proprietaireId" ).val("{{- vehicule.proprietaire.id -}}");
             $("#appbundle_vehicule_proprietaireAjax" ).val("{{ vehicule.proprietaire.nom }} {{ vehicule.proprietaire.prenom }} {{ vehicule.proprietaire.telephone }}");
         {% endif %}
-        $( "#appbundle_vehicule_ptac" ).change(function() {
+       /* $( "#appbundle_vehicule_ptac" ).change(function() {
             var ptac = $( "#appbundle_vehicule_ptac" ).val();
             if(ptac <= 3,5){
                 $( "#appbundle_vehicule_genre" ).val('VL');
             }else{
                 $( "#appbundle_vehicule_genre" ).val('PL');
             }
-          });    
+          });   */ 
     function log( message ) {
       $( "<div>" ).text( message ).prependTo( "#log" );
       $( "#log" ).scrollTop( 0 );
@@ -110,7 +110,7 @@
             .appendTo(ul);
     };
     
-    $( "#appbundle_vehicule_usageAjax" ).autocomplete({
+    /*$( "#appbundle_vehicule_usageAjax" ).autocomplete({
         source: function( request, response ) {
             $.ajax( {
                 url: "{{ path("usages_autocomplete") }}",
@@ -141,9 +141,9 @@
             .data("item.autocomplete", item)
             .append("<a>" + item.libelle + ' - '+ item.code + "</a>")
             .appendTo(ul);
-    };
+    };*/
     
-    $( "#appbundle_vehicule_carrosserieAjax" ).autocomplete({
+    /*$( "#appbundle_vehicule_carrosserieAjax" ).autocomplete({
         source: function( request, response ) {
             $.ajax( {
                 url: "{{ path("carrosseries_autocomplete") }}",
@@ -175,7 +175,7 @@
             .data("item.autocomplete", item)
             .append("<a>" + item.libelle + ' - '+ item.code + "</a>")
             .appendTo(ul);
-    };
+    };*/
     
   } );
   </script>
