--- a/app/Resources/views/vehicule/show.html.twig
+++ b/app/Resources/views/vehicule/show.html.twig
@@ -104,8 +104,8 @@
                 <td>{{ vehicule.immatriculationPrecedent }}</td>
             </tr>
             <tr>
-                <th>Type de carte</th>
-                <td>{{ vehicule.typeCarte }}</td>
+                <th>Type de carte grise</th>
+                <td>{{ vehicule.typeCarteGrise }}</td>
             </tr>
             <tr>
                 <th>TYPE</th>
