--- a/app/Resources/views/vehicule/edit.html.twig
+++ b/app/Resources/views/vehicule/edit.html.twig
@@ -29,28 +29,28 @@
 {% block javascripts -%}
     <script>
         $( function() {
-            $("#appbundle_vehicule_genre" ).val("{{- vehicule.typeVehicule.genre.code -}}");
+            //$("#appbundle_vehicule_genre" ).val("{{- vehicule.typeVehicule.genre.code -}}");
             $("#appbundle_vehicule_proprietaireId" ).val("{{- vehicule.proprietaire.id -}}");
             $("#appbundle_vehicule_proprietaireAjax" ).val("{{- vehicule.proprietaire.nom -}} {{- vehicule.proprietaire.prenom -}} {{- vehicule.proprietaire.telephone -}}");
-            $("#appbundle_vehicule_genre" ).prop("disabled", true);
+            //$("#appbundle_vehicule_genre" ).prop("disabled", true);
             $("#appbundle_vehicule_dateCarteGrise" ).datepicker({changeMonth: true, changeYear: true, defaultDate: "-10Y", dateFormat: 'yy-mm-dd' });
             $("#appbundle_vehicule_dateMiseCirculation" ).datepicker({changeMonth: true, changeYear: true,  defaultDate: "-10Y", dateFormat: 'yy-mm-dd' });
             $("#appbundle_vehicule_modeleId" ).val("{{- vehicule.modele.id -}}");
             $("#appbundle_vehicule_modeleAjax" ).val("{{- vehicule.modele.libelle -}}");
-            $("#appbundle_vehicule_usageId" ).val("{{- vehicule.typeVehicule.usage.id -}}");
-            $("#appbundle_vehicule_usageAjax" ).val("{{- vehicule.typeVehicule.usage.libelle -}}");
-            $("#appbundle_vehicule_carrosserieId" ).val("{{- vehicule.typeVehicule.carrosserie.id -}}");
-            $("#appbundle_vehicule_carrosserieAjax" ).val("{{- vehicule.typeVehicule.carrosserie.libelle -}}");
+            //$("#appbundle_vehicule_usageId" ).val("{{- vehicule.typeVehicule.usage.id -}}");
+            //$("#appbundle_vehicule_usageAjax" ).val("{{- vehicule.typeVehicule.usage.libelle -}}");
+            //$("#appbundle_vehicule_carrosserieId" ).val("{{- vehicule.typeVehicule.carrosserie.id -}}");
+            //$("#appbundle_vehicule_carrosserieAjax" ).val("{{- vehicule.typeVehicule.carrosserie.libelle -}}");
             $( "#appbundle_vehicule_dateValidite" ).datepicker({changeMonth: true, changeYear: true, defaultDate: "-10Y", dateFormat: 'yy-mm-dd' });
             $( "#appbundle_vehicule_dateImmatriculationPrecedent" ).datepicker({changeMonth: true, changeYear: true,  defaultDate: "-10Y", dateFormat: 'yy-mm-dd' });
-        $( "#appbundle_vehicule_ptac" ).change(function() {
+        /*$( "#appbundle_vehicule_ptac" ).change(function() {
             var ptac = $( "#appbundle_vehicule_ptac" ).val();
             if(ptac <= 3,5){
                 $( "#appbundle_vehicule_genre" ).val('VL');
             }else{
                 $( "#appbundle_vehicule_genre" ).val('PL');
             }
-          });
+          });*/
     function log( message ) {
       $( "<div>" ).text( message ).prependTo( "#log" );
       $( "#log" ).scrollTop( 0 );
@@ -120,7 +120,7 @@
             .appendTo(ul);
     };
     
-    $( "#appbundle_vehicule_usageAjax" ).autocomplete({
+    /*$( "#appbundle_vehicule_usageAjax" ).autocomplete({
         source: function( request, response ) {
             $.ajax( {
                 url: "{{ path("usages_autocomplete") }}",
@@ -185,7 +185,7 @@
             .data("item.autocomplete", item)
             .append("<a>" + item.libelle + ' - '+ item.code + "</a>")
             .appendTo(ul);
-    };
+    };*/
     
   } );
   </script>
